# pet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SPEC.md  VISION.md  pet.py  pyproject.toml  test_pet.py
artifacts/: law_of_growth.txt  pet_shape_graph.dot  pet_shapes.txt  shapes_w_metrics.txt
cases/: hybrid_eval_batch_v1.json  hybrid_eval_composite_non_prime_power_scan_v0.json  hybrid_eval_distinct_primes_boundary_v0.json  hybrid_eval_distinct_primes_boundary_v1.json  hybrid_eval_distinct_primes_with_without_2_v0.json  hybrid_eval_prime_power_scan_composites_v0.json  hybrid_eval_prime_power_scan_primes_v0.json  hybrid_eval_prime_power_scan_v0.json  hybrid_eval_smoke.json  hybrid_eval_status_boundary_v1.json  hybrid_eval_two_effect_scan_v0.json
docs/: CLI.md  RECAP_IT.md  SPEC.md  STATUS.md  VISION.md  experiment-1-scorecard.md  experiment-1.md  partial-pet-v0.md  partial-shape-target.md  pet-shape-algebra-v0.md  problem-statement.md
src/: pet.py  pet_algebra.py  pet_metrics.py
tests/: test_algebra.py  test_atlas_summary.py  test_atlas_summary_empty.py  test_auto_build_toward_target.py  test_auto_build_toward_target_best_matches_first_candidate_v1.py  test_auto_build_toward_target_best_result_metadata.py  test_auto_build_toward_target_candidate_metadata.py  test_auto_build_toward_target_candidate_order_v1.py  test_auto_build_toward_target_candidate_priority_metadata_v1.py  test_auto_build_toward_target_constructive_tie_break_v4.py  test_auto_build_toward_target_policy_auto_v4.py  test_auto_build_toward_target_policy_v2.py  (+100 more)
(+121 files in other folders)
