[build-system]
requires = ["setuptools>=65.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pet"
version = "0.1.0"
description = "PET — Prime Exponent Tree: canonical recursive representation of integers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/gcomneno/pet"
Issues = "https://github.com/gcomneno/pet/issues"

[project.scripts]
pet = "pet.cli:main"

[tool.pytest]
pythonpath = ["src"]